using UnityEngine;

namespace ChronicleDimension.InGame.NovelGame
{
    public class NovelGameManager : AbstractSingleton<NovelGameManager>
    {
        
    }
}